--- a/.github/workflows/snake-update.yml
+++ b/.github/workflows/snake-update.yml
@@ -1,14 +1,14 @@
-name: Generate Snake Animation
+name: Update Snake Animation
 
 on:
   # Chạy tự động mỗi 6 giờ
   schedule:
     - cron: "0 */6 * * *"
-  # Cho phép chạy thủ công từ GitHub Actions tab
-  workflow_dispatch:
-  # Chạy khi push vào main branch
+  # Chạy khi có push vào main branch
   push:
-    branches: [ main ]
+    branches: [ main, master ]
+  # Cho phép chạy thủ công
+  workflow_dispatch:
 
 jobs:
   generate:
@@ -17,24 +17,27 @@ jobs:
     
     permissions:
       contents: write
-
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Generate snake game from github contribution grid
+        
+      - name: Generate snake animation
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: kwishtt
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#2196f3&color_dots=#1565c0,#1976d2,#1e88e5,#42a5f5,#64b5f6
-            dist/github-contribution-grid-snake-light.svg?palette=github-light&color_snake=#1976d2&color_dots=#bbdefb,#90caf9,#64b5f6,#42a5f5,#2196f3
-
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#2196f3&color_dots=#0d47a1,#1565c0,#1976d2,#1e88e5,#2196f3
+            dist/github-contribution-grid-snake-light.svg?palette=github-light&color_snake=#1976d2&color_dots=#e3f2fd,#bbdefb,#90caf9,#64b5f6,#42a5f5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
+          keep_history: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
