--- a/.github/workflows/snake-green.yml
+++ b/.github/workflows/snake-green.yml
@@ -1,4 +1,4 @@
-name: Generate Snake Animation
+name: Generate Green Snake Animation
 
 on:
   # Chạy tự động mỗi 6 giờ
@@ -17,19 +17,19 @@ jobs:
     
     permissions:
       contents: write
-      
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Generate snake game from github contribution grid
+      - name: Generate green snake game from github contribution grid
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: kwishtt
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#00e676&color_dots=#0d1117,#1b5e20,#2e7d32,#388e3c,#43a047,#4caf50
-            dist/github-contribution-grid-snake-light.svg?palette=github-light&color_snake=#4caf50&color_dots=#ffffff,#c8e6c9,#a5d6a7,#81c784,#66bb6a,#4caf50
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#00e676&color_dots=#1b5e20,#2e7d32,#388e3c,#43a047,#4caf50
+            dist/github-contribution-grid-snake-light.svg?palette=github-light&color_snake=#4caf50&color_dots=#c8e6c9,#a5d6a7,#81c784,#66bb6a,#4caf50
 
       - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3
